<resources>
    <string name="app_name">MindBridge</string>
    <string name="title_activity_verification">MindBridge</string>
    <string name="we_ll_send_you_an">We\'ll send you an</string>
    <string name="one_time_password">One Time Password</string>
    <string name="otp_validation">OTP Validation</string>
    <string name="on_this_mobile_number">on this mobile Number...</string>
    <string name="type_your_mobile_number">Type your Mobile Number</string>
    <string name="Continue">Continue</string>
    <string name="enter_the_otp">Enter OTP</string>
    <string name="verify_your_mobile_number">Verify your mobile number</string>
    <string name="todo">TODO</string>
    <string name="profile_information">Profile Information</string>
    <string name="please_set_up_your_profile">Please set up your profile</string>
    <string name="type_your_name">Type your Name</string>
    <string name="set_up_profile">Set Up Profile</string>
    <string name="chat">Chat</string>
    <string name="profile_name">Profile Name</string>
    <string name="expertise">Expertise</string>
    <string name="online">Online</string>
    <string name="ask_a_question">Ask a Question...</string>
    <string name="delete_for_everyone">Delete for Everyone</string>
    <string name="delete_for_me">Delete for Me</string>
    <string name="type_your_age">Type your Age</string>
    <string name="type_your_qualification">Type your Qualification</string>
    <string name="logout">Logout</string>
    <string name="user_profile_image">User Profile Image</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">don\'t have an account</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="or">OR</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">forgot password</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="please_log_in_to_your_account">Please log in to your account</string>
    <string name="default_web_client_id">210933778976-4jgge9oj6ntvjiu7s5srcrkl5341pdnv.apps.googleusercontent.com</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_new_account">Create new account</string>
    <string name="full_name">Full Name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="please_enter_your_code_that_was_sent_to">Please enter your code that was sent to</string>
    <string name="_91_1111111111">+91 1111111111</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>