<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="#F4EAE8"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    tools:context=".SetupProfileActivity">

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_corners"
        android:clipToOutline="true"
        android:scaleType="centerCrop"
        android:src="@drawable/profile" />

    <TextView
        android:text="@string/profile_information"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold|normal"
        android:textColor="#12206D"
        android:layout_marginTop="32dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textAlignment="center"
        android:text="@string/please_set_up_your_profile"
        android:textSize="15sp"
        android:textStyle="bold|normal"
        android:textColor="#12206D"/>

    <androidx.cardview.widget.CardView
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="8dp"
        app:cardElevation="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:background="@color/white"
            android:layout_margin="15dp"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:layout_margin="5dp"
                android:id="@+id/profileBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_shape"
                android:ems="1"
                android:hint="@string/type_your_name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColor="#061D17"
                android:textSize="20sp"
                android:textStyle="bold|normal" />
            <EditText
                android:layout_margin="5dp"
                android:id="@+id/profileBoxAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_shape"
                android:ems="1"
                android:hint="@string/type_your_age"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColor="#061D17"
                android:textSize="20sp"
                android:textStyle="bold|normal" />
            <EditText
                android:layout_margin="5dp"
                android:id="@+id/profileBoxQualification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_shape"
                android:ems="1"
                android:hint="@string/type_your_qualification"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColor="#061D17"
                android:textSize="20sp"
                android:textStyle="bold|normal" />
            <EditText
                android:layout_margin="5dp"
                android:id="@+id/profileBoxInterestedIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_shape"
                android:ems="1"
                android:hint="Interested in"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColor="#061D17"
                android:textSize="20sp"
                android:textStyle="bold|normal" />

            <Button
                android:id="@+id/setUpbtn"
                android:text="@string/set_up_profile"
                android:textStyle="bold|normal"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:backgroundTint="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>




</LinearLayout>