<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    tools:context=".OTPActivity">

    <ImageView
        android:contentDescription="TODO"
        android:src="@drawable/otp"
        android:scaleType="centerCrop"
        android:layout_width="250dp"
        android:layout_height="250dp"
        tools:ignore="ContentDescription,HardcodedText" />

    <TextView
        android:id="@+id/phoneLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold|normal"
        android:textColor="#B629CE"
        android:text="@string/verify_your_mobile_number"/>

    <TextView
        android:gravity="center"
        android:text="@string/please_enter_your_code_that_was_sent_to"
        android:textColor="#66000000"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/email_address"
        android:textColor="#66000000"
        android:layout_gravity="center"
        android:textSize="12sp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/otpEmail"
        android:layout_gravity="center"
        android:textColor="#CC000000"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="testgmail@gmail.com"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/mobile_number"
        android:textColor="#66000000"
        android:layout_gravity="center"
        android:textSize="12sp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/otpMobile"
        android:layout_gravity="center"
        android:textColor="#CC000000"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/_91_1111111111"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>




    <androidx.cardview.widget.CardView
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="8dp"
        app:cardElevation="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:importantForAutofill="no"
            android:padding="15dp"
            android:background="@color/white"
            android:layout_margin="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <!-- OTP Digit 1 -->
            <EditText
                android:id="@+id/otpdigit1"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:ems="1"
                android:hint="•"
                android:inputType="number"
                android:maxLength="1"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textColor="#051B16"
                android:textColorHint="#78909C"
                android:textSize="20sp"
                android:textStyle="bold|normal"
                tools:ignore="Autofill,HardcodedText,DuplicateSpeakableTextCheck" />

            <!-- OTP Digit 2 -->
            <EditText
                android:id="@+id/otpdigit2"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:ems="1"
                android:hint="•"
                android:inputType="number"
                android:maxLength="1"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textColor="#051B16"
                android:textColorHint="#78909C"
                android:textSize="20sp"
                android:textStyle="bold|normal"
                tools:ignore="Autofill,HardcodedText" />

            <!-- OTP Digit 3 -->
            <EditText
                android:id="@+id/otpdigit3"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="#ffffff"
                android:ems="1"
                android:hint="•"
                android:inputType="number"
                android:maxLength="1"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textColor="#051B16"
                android:textColorHint="#78909C"
                android:textSize="20sp"
                android:textStyle="bold|normal"
                tools:ignore="HardcodedText" />

            <!-- OTP Digit 4 -->
            <EditText
                android:id="@+id/otpdigit4"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:ems="1"
                android:hint="•"
                android:inputType="number"
                android:maxLength="1"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textColor="#051B16"
                android:textColorHint="#78909C"
                android:textSize="20sp"
                android:textStyle="bold|normal"
                tools:ignore="Autofill,HardcodedText" />

            <!-- OTP Digit 5 -->
            <EditText
                android:id="@+id/otpdigit5"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:ems="1"
                android:hint="•"
                android:inputType="number"
                android:maxLength="1"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textColor="#051B16"
                android:textColorHint="#78909C"
                android:textSize="20sp"
                android:textStyle="bold|normal"
                tools:ignore="Autofill,HardcodedText" />

            <!-- OTP Digit 6 -->
            <EditText
                android:id="@+id/otpdigit6"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="#ffffff"
                android:ems="1"
                android:hint="•"
                android:inputType="number"
                android:maxLength="1"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textColor="#051B16"
                android:textColorHint="#78909C"
                android:textSize="20sp"
                android:textStyle="bold|normal"
                tools:ignore="HardcodedText" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/continueBtn"
        android:text="@string/Continue"
        android:textStyle="bold|normal"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:backgroundTint="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="VisualLintButtonSize" />

</LinearLayout>
